<?xml version="1.0"?>
<package format="3">
  <name>hday_slam</name>
  <version>0.1.0</version>
  <description>Library for SLAM</description>
  <maintainer email="changhyeon.kim@holiday-robotics.com">Changhyeon Kim</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  
  <depend>eigen</depend>
  <depend>pcl_ros</depend>
  
  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
